--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
   margin: 0;
@@ -11,7 +12,10 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  letter-spacing: 1px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -94,12 +98,14 @@ body {
   background-image: var(--BG-COLOR-GRADIENT);
   width: max(100%, 320px);
   margin-bottom: 10vh;
+  box-shadow: 4px 1px 5px rgba(0, 0, 0, 0.781);
 }
 
 .cityList {
   width: 100%;
   list-style-type: none;
   border-bottom: 2px solid black;
+
 }
 
 .cityElement a {
@@ -123,7 +129,7 @@ body {
 
 .districtSection {
   width: 100%;
-
+  box-shadow: 4px 1px 5px rgba(0, 0, 0, 0.781);
   margin-bottom: 10vh;
 }
 
