--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,7 @@ body {
 .statusMsg {
   font-size: 3rem;
   font-weight: 1500;
+  padding: 0.5rem;
   background-color: rgba(255, 255, 255, 0);
 }
 
